src/test/ui/error-codes/E0502.stderr
error[E0502]: cannot borrow `*a` as mutable because `a` is also borrowed as immutable
  --> $DIR/E0502.rs:14:9
   |
13 |     let ref y = a;
   |         ----- immutable borrow occurs here
14 |     bar(a); //~ ERROR E0502
   |         ^ mutable borrow occurs here
15 | }
   | - immutable borrow ends here

error: aborting due to previous error

